--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@babel/preset-typescript": "^7.16.0",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@ricardo-jrm/empathy": "^1.0.1",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
@@ -93,7 +94,11 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "vega": "^5.21.0",
+    "vega-lite": "^5.2.0",
+    "vega-lite-api": "^5.0.0",
+    "vega-tooltip": "^0.27.0"
   },
   "peerDependencies": {
     "react": "^17.0.2",
